--- a/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.html
@@ -49,7 +49,7 @@ style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue
                 </form> -->
 
 
-                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" novalidate>
+                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" >
 
                   <div class="d-flex align-items-center mb-3 pb-1">
                     <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
@@ -79,8 +79,32 @@ style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue
                     </div>
                   </div>
 
+                  <div class="form-outline mb-4">
+                    <label for="idName" class="col-sm-3 col-form-label">Role Id:</label>
+                    <div class="row">
+                    <div class="col-3">
+                      <select class="form-select" id="idName" id="drop" formControlName="idName" placeholder="Select">
+                        <option value="EMP" selected>EMP</option>
+                        <option value="GRAD">GRAD</option>
+                      </select>
+                      
+                      </div>
+                      <input type="text" class="form-control col-sm-3 w-20" formControlName="roleId" name="roleId" id="roleId" placeholder="Enter the ID">
+                      
+                    </div>
+                    <div *ngIf="isInvalid('roleId')" class="text-danger">
+                      {{ getErrorMessage('roleId') }}
+                    </div>
+                    <div *ngIf="isInvalid('idName')" class="text-danger">
+                      {{ getErrorMessage('idName') }}
+                    </div>
+                  </div>
+                
+
+                
+
                   <div class="pt-1 mb-4">
-                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit" [disabled]="loginForm.invalid" routerLink="/home">Login</button>
+                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit" [disabled]="loginForm.invalid">Login</button>
                   </div>
 
                   <a class="large text-muted" routerLink="/forgotpassword">Forgot password?</a>
