job-seeker form added

--- a/NewFirstevaluation/Frontend_Angular/src/app/components/stud-register/stud-register.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/stud-register/stud-register.component.html
@@ -171,7 +171,7 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
 
               <button type="submit" class="btn btn-primary" id="inputfield" [disabled]="!studRegisterForm.valid">Register</button>
               <p class="text-center mt-3">
-                Already a Member? <a routerLink="/emp-login" style="color: #393f81;">Login</a>
+                Already a Member? <a routerLink="/stud-login" style="color: #393f81;">Login</a>
               </p>
             </form>
           </div>
