--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-seeker/job-seeker.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-seeker/job-seeker.component.html
@@ -5,8 +5,8 @@
     <div class="col  col-xl-10">
       <div class="card" style="border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
         <div class="card-body p-4 p-lg-5 text-black">
-          <h1 class="h1 fw-bold mb-0">Appointment Scheduling </h1>
-          <form [formGroup]="appointForm" (ngSubmit)="onSubmit()" novalidate>
+          <h1 class="h1 fw-bold mb-0">Job Seeker Form </h1>
+          <form [formGroup]="jobSeekerForm" (ngSubmit)="onSubmit()" novalidate>
 
             <!-- Full Name -->
             <div class="form-outline mb-2">
