--- a/NewFirstevaluation/Frontend_Angular/src/app/components/appointment/appointment.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/appointment/appointment.component.css
@@ -1,24 +1,27 @@
-#inputfield{
-    width: 100%;
+.top-div {
+  margin: 0;
+  padding: 0;
+  background-color: #3c6a8b;
+  background-size: cover;
+  height: 100%;
 }
 
-#formcard{
-    position: absolute;
-    right: 20%;
+#formcard {
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(10px);
+  border-radius: 2rem;
+  padding: 20px;
 }
 
-
-#sponsorcard{
-    position: absolute;
-    left: 38%;
-    padding-right: 0%;
-    padding-left: 0%;
+#sidebar {
+  position: relative;
+  height: 100%;
 }
 
-#wisecard{
-    position: absolute;
-    left: 38%;
-    padding-right: 0%;
-    padding-left: 0%;
-    top: 100%;
+#sponsorcard, #wisecard {
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(10px);
+  border-radius: 2rem;
+  padding: 20px;
+  margin-top: 20px;
 }
