--- a/NewFirstevaluation/Frontend_Angular/src/app/components/appointment/appointment.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/appointment/appointment.component.html
@@ -156,10 +156,12 @@
                       <li>Accenture</li>
                       <li>Premium Jobs</li>
                       <hr>
-                      <li>Atos</li>
+
+                      <li>TCS</li>
                       <li>Premium Jobs</li>
                       <hr>
-                      <li>TCS</li>
+
+                      <li>CTS</li>
                       <li>Premium Jobs</li>
                       <hr>
                   </ul>
