--- a/NewFirstevaluation/Frontend_Angular/src/app/components/stud-register/stud-register.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/stud-register/stud-register.component.html
@@ -169,15 +169,15 @@ background-size: 1920px 1200px; background-repeat: no-repeat;">
               </div> -->
 
 
-<<<<<<< HEAD
+
               <button type="submit" class="btn btn-primary" id="inputfield" [disabled]="!studRegisterForm.valid">Register</button>
               <p class="text-center mt-3">
-                Already a Member? <a routerLink="/stud-login" style="color: #393f81;">Login</a>
+                <!-- Already a Member? <a routerLink="/stud-login" style="color: #393f81;">Login</a> -->
               </p>
-=======
-              <button type="submit" class="btn btn-primary mt-4" id="inputfield" [disabled]="!studRegisterForm.valid" >Register</button>
-              
->>>>>>> c856fe30b65197a62c4341c3c25e314251895844
+
+              <!-- <button type="submit" class="btn btn-primary mt-4" id="inputfield" [disabled]="!studRegisterForm.valid" >Register</button> -->
+
+
             </form>
           </div>
         </div>
