--- a/NewFirstevaluation/Frontend_Angular/src/app/components/emp-register/emp-register.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/emp-register/emp-register.component.html
@@ -80,7 +80,7 @@ background-size: 1920px 1300px; background-repeat: no-repeat;">
               </div>
 
 
-              <button type="submit" class="btn btn-primary mt-4" id="inputfield" [disabled]="!empRegisterForm.valid" routerLink="/home">Submit</button>
+              <button type="submit" class="btn btn-primary mt-4" id="inputfield" [disabled]="!empRegisterForm.valid" >Submit</button>
             </form>
           </div>
         </div>
