--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-list/job-list.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-list/job-list.component.html
@@ -16,11 +16,11 @@
                 <button class="btn btn-outline-secondary" type="button" (click)="clearSearch()">Clear</button>
                 </div>
             </div>
-            <ul>
-                <li *ngFor="let item of items | filter: searchText">
-                {{ item }}
+            <!-- <ul>
+                <li *ngFor="let job of joblist | filter: searchText">
+                {{ job }}
                 </li>
-            </ul>
+            </ul> -->
        </div>
         <table>
             <tr>
