--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,21 +34,21 @@
           <!-- Services -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
           <li class="nav-item">
-            <a class="nav-link" routerLink="/job-search" routerLinkActive="active">Services</a>
+            <a class="nav-link" routerLink="/services" routerLinkActive="active">Services</a>
           </li>
 
 
           <!-- Blog  -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
           <li class="nav-item" >
-            <a class="nav-link" routerLink="/job-search" routerLinkActive="active">Blogs</a>
+            <a class="nav-link" routerLink="/blogs" routerLinkActive="active">Blogs</a>
           </li>
 
 
           <!-- About Us -->
           <!-- *ngIf="currentRoute !== '/login'" -->
           <li class="nav-item" >
-            <a class="nav-link" routerLink="/job-search" routerLinkActive="active">About Us</a>
+            <a class="nav-link" routerLink="/aboutUs" routerLinkActive="active">About Us</a>
           </li>
 
           <!-- Log In -->
@@ -62,7 +62,7 @@
         </ul>
 
         <!-- Green dot for logged-in status -->
-        <span *ngIf="isLoggedIn" class="green-dot"></span>
+        <!-- <span *ngIf="isLoggedIn" class="green-dot"></span> -->
       </div>
     </div>
   </nav>
