--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,11 +1,11 @@
-<section class="vh-50"
-style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg'); background-size:1900px 1900px ; background-repeat: no-repeat;">
+<section class="log-div">
+  <!-- style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg'); background-size:1900px 1900px ; background-repeat: no-repeat;" -->
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
         <div class="card" style="border-radius: 1rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px);">
           <div class="row g-0">
-            
+
             <!-- Image -->
             <div class="col-md-6 col-lg-5 d-none d-md-block">
               <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
@@ -20,7 +20,7 @@ style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue
 
                   <div class="d-flex align-items-center mb-3 pb-1">
                     <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                    <span class="h2 fw-bold mb-0">LogIn Form</span>
+                    <span class="h2 fw-bold mb-0" style="color: rgb(5, 15, 60);">Log In Page</span>
                   </div>
 
                   <!-- <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Login into your account</h5> -->
@@ -71,11 +71,11 @@ style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue
 
 
                   <div class="pt-1 mb-4">
-                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit" [disabled]="loginForm.invalid">Login</button>
+                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary w-50" type="submit" [disabled]="loginForm.invalid">Login</button>
                   </div>
 
                   <a class="large text-muted" routerLink="/forgotpassword">Forgot password?</a>
-                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a routerLink="/register" style="color: #393f81;">Register here</a></p>
+                  <p class="mb-5 pb-lg-2"style="color: rgb(5, 15, 60);">Don't have an account? <a routerLink="/register" style="color: rgb(5, 15, 60);">Register here</a></p>
                 </form>
               </div>
             </div>
