--- a/src/app/components/registration/registration.component.css
+++ b/src/app/components/registration/registration.component.css
@@ -13,6 +13,11 @@
     background-color: rgb(90, 174, 180);
 }
 
-.form-div{
+/* .form-div{
   background-color: bisque;
+} */
+
+.regDiv{
+  background-color: rgb(146, 171, 198);
 }
+
