--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,28 +1,52 @@
-.button-group .btn {
-    margin-right: 20px; /* Adjust this value as needed */
+.container {
+  position: relative;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  top: 0;
 }
 
-.bg-div{
-  background-image: url('./homeImage/demo-bg.jpg');
 
-  min-height: 100vh;
-    width: 100%;
-
-    background-position: center;
-    background-size: cover;
-    position: relative;
-  /* background-image:url(Images/bg.jpg); */
-    /* background-size: cover; */
-  /* background-repeat: no-repeat; */
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
+  background-image: url('https://eskyoc.com/recruit.png');
+  background-size: cover;
+  background-position: center;
+  filter: blur(5px);
 }
 
-.my-element {
-	/* Use a flexbox layout */
-	display: flex;
 
-	/* Make a horizontal flexbox (the default) */
-	flex-direction: row;
-
-	/* The important part: vertically center the items */
-	align-items: center;
+.content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+  z-index: 1;
 }
+
+
+
+
+.animated-text {
+  opacity: 0;
+  animation: fadeInUp 1s ease forwards;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
