--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,13 +18,14 @@
 <!-- <app-job-search></app-job-search> -->
 
 
-<section class="bg-div">
-  <!-- <h1>About Us</h1> -->
-  <h2 style="color: brown;" class="my-element">
-    Hello ! <br>
-    This is the website for<br>
-    Job Postings <br>
-    And<br>
-    Job Findings
-  </h2>
-</section>
+<div class="container">
+  <div class="background"></div>
+  <div class="content">
+    <h1 class="animated-text">Elevate Your Career Journey</h1>
+    <h4 class="animated-text">Our platform connects talented individuals with exciting job openings, empowering you to take the next step towards professional success.</h4>
+    <h3 class="animated-text">Join us now!</h3>
+
+  
+  </div>
+</div>
+
