15th May part-II

--- a/src/app/components/emp-register/emp-register.component.html
+++ b/src/app/components/emp-register/emp-register.component.html
@@ -1,10 +1,12 @@
-<section style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg');
-background-size: 1920px 1300px; background-repeat: no-repeat;">
+<section class="emp-div">
+  <!-- style="background-image: url('https://cdn.vectorstock.com/i/500p/73/98/dark-blue-gradient-abstract-background-vector-27317398.jpg');
+background-size: 1920px 1300px; background-repeat: no-repeat;" -->
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
         <div class="card" style="border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
-          <div class="card-body p-4 p-lg-5 text-black">
+          <div class="card-body p-4 p-lg-5 " style="color: rgb(5, 50, 70);">
+            <!-- text-black -->
             <h2 class="h1 fw-bold mb-0">Employer Details</h2>
             <form [formGroup]="empRegisterForm" (ngSubmit)="onSubmit()" novalidate>
               <!-- ROLE IN COMPANY -->
